src/objects/ints__Blackbook_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This will contain all the parameters that can be useful for invoking apis of blackbook</description>
    <fields>
        <fullName>ints__Allow_Manual_Mileage_Adjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If mileage adjustments needs to be done manually for an equipment&apos;s collateral valuation then mark this selected.</description>
        <inlineHelpText>If mileage adjustments needs to be done manually for an equipment&apos;s collateral valuation then mark this selected.</inlineHelpText>
        <label>Allow Manual Mileage Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__BB_Account_Password__c</fullName>
        <label>BB Account Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__BB_Account_UserName__c</fullName>
        <label>BB Account UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Make_Mapping__c</fullName>
        <label>Make Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ManufacturerCode_Mapping__c</fullName>
        <label>ManufacturerCode Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Mileage_Mapping__c</fullName>
        <label>Mileage Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Model_Mapping__c</fullName>
        <label>Model Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Request_Timeout__c</fullName>
        <description>Set the time out value for passing in request</description>
        <label>Request Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Style_Mapping__c</fullName>
        <label>Style Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__UVC_Mapping__c</fullName>
        <label>UVC Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__VIN_Mapping__c</fullName>
        <label>VIN Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__VehicleId_Mapping__c</fullName>
        <label>VehicleId Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Year_Mapping__c</fullName>
        <label>Year Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Blackbook Parameters</label>
</CustomObject>